     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 
     * Change example SQL command for setting up an external database to remove
       (sometimes incorrect) host name and possibly fix some random regression in
       some MySQL versions. (BR 225052)

  BUGFIXES:
     * Fixed a broken podcast feed that had a minor compliance issue in date
       format. (BR 231062)
     * Fixed "files" bookmarks not storing the actual path shown in the file 
       browser (BR 231437)
     * Fixed incorrectly displayed cover images for albums with the same name,
       e.g. "Greatest Hits". (BR 170146)
     * Fixed problems with new Main Toolbar and SHOUTcast streams: Since these
       streams cannot be paused, we detect this now and stop them instead.
     * Fixed permission errors with each file copied to an iPhone via iFuse.
       Thanks to Colin Guthrie <cguthrie@mandriva.org> for the patch. (BR 231021)
     * Fixed issues with using random navigators while filetering or searching the
       Playlist. (BR 229226) (BR 222129)
     * Fixed crash related to the new playlist tooltips. (BR 229696)
     * Fixed some artist/album/track names not getting shown or getting shown 
       incorrectly in the Current Track applet because of html encoding. 
       (BR 222765)
     * Fixed issue with the Albums applet not correctly updating when playing a 
       track by an artist not present in the local collection. 
     * Fixed Albums applet not getting updated if the artist of the currently 
       playing track was edited. (BR 210296)
     * Fixed bad window title for the details edit dialog in the playlist layout 
       editor. (BR 227912)
     * Fixed wrong track getting dragged from the Playlist when sorting and/or
       filtering is active. (BR 226503)
     * Fixed visual indication for "Stop After This Track" not getting shown 
       immediately when using the global shortcut. (BR 230569)