@@ -44,6 +44,8 @@ VERSION 2.3.1-Beta 1
        some MySQL versions. (BR 225052)
 
   BUGFIXES:
+     * Fixed organize collection dialog deleting tracks at new location
+       instead of old. (BR 217002)
      * Fixed a broken podcast feed that had a minor compliance issue in date
        format. (BR 231062)
      * Fixed "files" bookmarks not storing the actual path shown in the file 
